<resources>
    <string name="app_name">BusinessSyncApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_home">BusinessSync</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="my_card">Your Business Card</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="save">Save</string>
    <string name="profile_menu">Profile</string>
    <string name="register_card">Register Card</string>
    <string name="register_card_prompt">Tap a New Card to Register or Remove</string>
    <string name="cards_registered">Cards Registered:</string>
    <string name="card_id">Card ID:</string>
    <string name="add_contact_str">Confirm</string>
    <string name="contacts_menu_str">Contacts</string>
    <string name="add_contact_tap">Tap a Card to Add a New Contact</string>
    <string name="confirm_contact_str">Add Contact</string>
    <string name="first_name">First Name:</string>
    <string name="last_name_add">Last Name:</string>
    <string name="title_confirm_contact">Add Contact</string>
    <string name="cell_num">Work Phone</string>
</resources>
