<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/profile_menu"/>
        <item
                android:id="@+id/nav_register_card"
                android:icon="@drawable/ic_credit_card_black_24dp"
                android:title="@string/register_card"/>
        <item
                android:id="@+id/nav_add_contact"
                android:icon="@drawable/ic_import_contacts_black_24dp"
                android:title="@string/contacts_menu_str"/>
        <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_cancel_black_24dp"
                android:title="@string/action_sign_out"/>
    </group>

</menu>
