<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:text="@string/confirm_contact_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp" android:id="@+id/textView"
            android:textAppearance="@android:style/TextAppearance.Material.Large" android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
    <TextView
            android:text="@string/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="126dp" android:id="@+id/first_name_add_text"
            android:layout_below="@+id/textView" android:layout_alignParentStart="true"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignBottom="@+id/first_name_add_text"
            android:layout_toStartOf="@+id/textView" android:id="@+id/first_name_add"/>
    <TextView
            android:text="@string/last_name_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_below="@+id/first_name_add_text"
            android:layout_alignParentStart="true" android:layout_marginTop="21dp" android:id="@+id/last_name_add_text"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignTop="@+id/last_name_add_text"
            android:layout_alignStart="@+id/first_name_add" android:id="@+id/last_name_add"/>
</RelativeLayout>